# meida

./: README.md  index.html  package.json  vite.config.ts
bak/: index.tsx
src/: App copy.tsx  App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  fangy.db  tauri.conf.json
src-tauri/fangyuan_data/: Cargo.toml  fangy.db
src-tauri/fangyuan_data/examples/: db.rs
src-tauri/fangyuan_data/src/: fangy.rs  lib.rs
src-tauri/src/: main.rs
src/api/: SecondHandHouse.ts  SecondHandHousing.ts  api.ts  community.ts  fangy.ts  gushi.ts  house.ts  imports.ts  rental_house.ts  second_hand_house.ts  users.ts
src/components/: Community.tsx  FangyFromItems.tsx  FanyFrom.tsx  FanyList.less  FanyList.tsx  FilterRenting.tsx  FilterSecondHandHousing.tsx  House.tsx  ImagePhoto.tsx  ProDescriptionsModal.tsx  RentingTable.tsx  SecondHandHouseForm.tsx  SecondHandHousing.tsx  SecondHandHousingTable.tsx  UploadFany.tsx  UploadHouse copy.tsx  UploadHouse.tsx  icons.tsx  rental_house.tsx  second_hand_house.tsx
src/components/ui/: NoMatch.tsx
src/hooks/: useFilterExpand.ts  useQuerySecondHandHousing.ts
src/model/: Community.ts  House.ts  SecondHandHousing.ts  rental_house.ts  second_hand_housing.ts  user.ts
src/pages/SecondHandHouse/: SoldModal.tsx  edit copy 2.tsx  edit copy.tsx  edit.tsx  index.tsx  list.tsx
src/pages/community/: edit.tsx  index.tsx  list copy.tsx  list.tsx
src/pages/exports/: ExportProperties.tsx
src/pages/house/: edit copy.tsx  edit.tsx  index.tsx  list copy.tsx  list.tsx
src/pages/login/: index.tsx
src/pages/rental_house/: SoldModal.tsx  edit.tsx  index.tsx  list.tsx  sold_modal.tsx
src/pages/residential/: save.tsx
src/pages/second_hand_house/: edit.tsx  list.tsx  sold_modal.tsx
src/pages/sold/: index.tsx  list.tsx  rental_house.tsx  second_hand_house.tsx
src/pages/users/: edit.tsx  list.tsx
src/value_object/: columns.tsx  common.ts  house_columns.ts  house_columns.tsx  user.ts
src_admin/: .env  Cargo.toml
src_admin/api/: Cargo.toml
src_admin/api/src/: config.rs  lib.rs  response.rs
src_admin/api/src/headers/: second_hand_housing.rs  todos.rs
src_admin/assets/: index.html
src_admin/dto/: Cargo.toml
src_admin/dto/src/: second_hand_housing.rs
src_admin/model/: Cargo.toml
src_admin/model/src/: lib.rs  second_hand_housing.rs  todos.rs
src_admin/repository/: .env  Cargo.toml
src_admin/repository/migrations/: 20240713142250_second_hand_housing.sql
src_admin/repository/src/: lib.rs  pool.rs  second_hand_housing.rs  todos.rs
src_admin/repository/tests/: second_hand_housing.rs
src_admin/service/: Cargo.toml
src_admin/service/src/: lib.rs  qiliu.rs  second_hand_housing.rs
src_admin/src/: main.rs
