[package]
name = "src_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.11.3"
actix-files = "0.6.6"
thiserror = "1.0.62"
api = { path = "api" }
actix-web = { workspace = true }
dotenv = { workspace = true }
derive_more ={ workspace = true }
repository = { workspace = true  }


[workspace]
members = [
  "api",
  "repository",
  "dto",
  "model", "service",
]

[workspace.dependencies]
anyhow = "1.0.86"
actix-web = "4"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.11", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "time", "bigdecimal"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenv = "0.15.0"
structopt = "0.3.26"
serde_json = "1.0.81"
derive_more = "0.99.17"
serde_with = { version = "3.8.0", features = ["time_0_3"] }
repository = { path = "repository" }
service = { path = "service" }
dto = { path = "dto" }
model = {  path = "model" }
