[package]
name = "fangyuan_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
uuid = { version = "1.3.0", features = ["v4"] }

[examples]
name = "fangyuan_data"