[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more ={ workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }

dto = { workspace = true }
service = { workspace = true }
