[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {  workspace = true }
structopt = {  workspace = true }
tokio = {  workspace = true }
serde = {  workspace = true }
anyhow ={  workspace = true }
dotenv = {  workspace = true }
bigdecimal = { workspace = true }
dto = { workspace = true  }
model = { workspace = true }

[dev-dependencies]
fake = { version = "2.9.2" }


