[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
dto = { path = "../dto" }
model = { path = "../model" }
repository = { path = "../repository" }
anyhow = { workspace = true }
sqlx ={ workspace = true }
qiniu-sdk = { version = "0.2.4", features = ["upload-token", "credential", "download"]}
structopt = { workspace = true }
qiniu-credential = "0.2.4"
qiniu-upload-token = "0.2.4"
http = "1.1.0"
url-escape = "0.1.1"
